cmake_minimum_required(VERSION 3.15)

project("Iterators")

set (CMAKE_CXX_STANDARD 14)

add_executable(1_iterator_on_vector 1_iterator_on_vector.cpp)
add_executable(2_iterator_on_array 2_iterator_on_array.cpp)
add_executable(3_iterator_on_list 3_iterator_on_list.cpp)
add_executable(4_iterator_on_set 4_iterator_on_set.cpp)
add_executable(5_iterator_on_unordered_set 5_iterator_on_unordered_set.cpp)
add_executable(6_next_and_prev 6_next_and_prev.cpp)
